crates/syntax/src/snapshots/successes/syntax__tests__successes@function_call_multi.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse_no_errors(Program::parse(&input))"

---
Program@0..95
  CallExprStmt@0..40
    CallExpr@0..40
      NameRef@0..10
        Ident@0..10 "multi_call"
      Arglist@10..40
        LParen@10..11 "("
        MultivalExpr@11..39
          NameRef@11..16
            Ident@11..16 "first"
          Comma@16..17 ","
          Whitespace@17..18 " "
          NameRef@18..28
            Ident@18..28 "second_arg"
          Comma@28..29 ","
          Whitespace@29..30 " "
          NameRef@30..39
            Ident@30..39 "third_arg"
        RParen@39..40 ")"
  Whitespace@40..41 "\n"
  CallExprStmt@41..94
    CallExpr@41..94
      NameRef@41..65
        Ident@41..65 "mutli_call_with_literals"
      Arglist@65..94
        LParen@65..66 "("
        MultivalExpr@66..93
          Literal@66..73
            Str@66..73 "\"first\""
          Comma@73..74 ","
          Whitespace@74..75 " "
          InfixExpr@75..82
            Literal@75..78
              Number@75..78 "123"
            Whitespace@78..79 " "
            Plus@79..80 "+"
            Whitespace@80..81 " "
            Literal@81..82
              Number@81..82 "1"
          Comma@82..83 ","
          Whitespace@83..84 " "
          InfixExpr@84..93
            InfixExpr@84..89
              Literal@84..86
                Number@84..86 "23"
              Caret@86..87 "^"
              Literal@87..89
                Number@87..89 "10"
            Whitespace@89..90 " "
            Asterisk@90..91 "*"
            Whitespace@91..92 " "
            Literal@92..93
              Number@92..93 "2"
        RParen@93..94 ")"
  Whitespace@94..95 "\n"

