crates/syntax/src/snapshots/successes/syntax__tests__successes@generic_for_stmt.snap
---
source: crates/syntax/src/tests.rs
expression: s

---
Program@0..45
  ForStmt@0..44
    ForKw@0..3 "for"
    Whitespace@3..4 " "
    ForContent@4..23
      GenericFor@4..23
        MultiName@4..8
          Name@4..5
            Ident@4..5 "k"
          Comma@5..6 ","
          Whitespace@6..7 " "
          Name@7..8
            Ident@7..8 "v"
        Whitespace@8..9 " "
        InKw@9..11 "in"
        Whitespace@11..12 " "
        CallExpr@12..23
          NameRef@12..18
            Ident@12..18 "ipairs"
          Arglist@18..23
            LParen@18..19 "("
            MultivalExpr@19..22
              NameRef@19..22
                Ident@19..22 "tbl"
            RParen@22..23 ")"
    Whitespace@23..24 " "
    DoKw@24..26 "do"
    Whitespace@26..29 "\n  "
    Block@29..40
      ExprStmt@29..40
        MultivalExpr@29..40
          CallExpr@29..40
            NameRef@29..34
              Ident@29..34 "print"
            Arglist@34..40
              LParen@34..35 "("
              MultivalExpr@35..39
                NameRef@35..36
                  Ident@35..36 "k"
                Comma@36..37 ","
                Whitespace@37..38 " "
                NameRef@38..39
                  Ident@38..39 "v"
              RParen@39..40 ")"
    Whitespace@40..41 "\n"
    EndKw@41..44 "end"
  Whitespace@44..45 "\n"

=============================
Errors:
=============================
[]
