crates/syntax/src/snapshots/successes/syntax__tests__successes@map_table_expr.snap
---
source: crates/syntax/src/tests.rs
expression: s

---
Program@0..81
  LocalAssignStmt@0..80
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    MultiName@6..9
      Name@6..9
        Ident@6..9 "map"
    Whitespace@9..10 " "
    Eq@10..11 "="
    Whitespace@11..12 " "
    MultivalExpr@12..80
      TableExpr@12..80
        LBrace@12..13 "{"
        Whitespace@13..16 "\n  "
        TableContent@16..27
          KeyValue@16..27
            TableKey@16..23
              IdentKey@16..23
                Ident@16..23 "another"
            Whitespace@23..24 " "
            Eq@24..25 "="
            Whitespace@25..26 " "
            Literal@26..27
              Number@26..27 "4"
        Comma@27..28 ","
        Whitespace@28..31 "\n  "
        TableContent@31..52
          KeyValue@31..52
            TableKey@31..35
              Index@31..35
                LBracket@31..32 "["
                Literal@32..34
                  Number@32..34 "23"
                RBracket@34..35 "]"
            Whitespace@35..36 " "
            Eq@36..37 "="
            Whitespace@37..38 " "
            Literal@38..52
              Str@38..52 "\"hello person\""
        Comma@52..53 ","
        Whitespace@53..56 "\n  "
        TableContent@56..77
          KeyValue@56..77
            TableKey@56..72
              Index@56..72
                LBracket@56..57 "["
                FunctionExpr@57..71
                  FunctionKw@57..65 "function"
                  Paramlist@65..67
                    LParen@65..66 "("
                    RParen@66..67 ")"
                  Whitespace@67..68 " "
                  Body@68..68
                  EndKw@68..71 "end"
                RBracket@71..72 "]"
            Whitespace@72..73 " "
            Eq@73..74 "="
            Whitespace@74..75 " "
            Literal@75..77
              Number@75..77 "23"
        Comma@77..78 ","
        Whitespace@78..79 "\n"
        RBrace@79..80 "}"
  Whitespace@80..81 "\n"

=============================
Errors:
=============================
[]
